[package]
name = "ibreq"
version = "0.1.0"
authors = ["andantonyan <andantonyan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
native-tls = "0.2.4"
rand = "0.7.3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"