[package]
name = "iblib"
version = "0.1.0"
authors = ["andantonyan <andantonyan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
once_cell = "1.4.1"
native-tls = "0.2.4"
dirs = "3.0.1"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.11"

# [package.metadata.winres]
# OriginalFilename = "IBREQ.EXE"
# LegalCopyright = "Copyright © 2020"
